# mrie

./: .env.sample  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
requirements/: dev.txt  prd.txt
src/: __init__.py  app_middleware.py  app_routes.py  main.py  resources.py  settings.py
templates/: base copy.html  base.html  index.html
templates/error/: error-page.html
tests/: test_main.py
