[project]
name = "MikeRyan.ie"
version = "2024.10.24.1"
requires-python = ">=3.11"
description = "MikeRyan.ie website"
readme = "README.md"
classifiers = [ "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3.12", "Operating System :: POSIX :: Linux", "Operating System :: POSIX",]
[[project.authors]]
name = "Mike Ryan"
email = "mikeryan56@gmail.com"

[[project.maintainers]]
name = "Mike Ryan"
email = "mikeryan56@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/devsetgo/mrie"
Repository = "https://github.com/devsetgo/mrie"

[project.scripts]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = [ "src", "test",]
exclude = [ "unreleased/*", "scripts/*", "coverage.xml", "coverage-badge.svg",]
reportMissingImports = true
reportMissingTypeStubs = true
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportGeneralTypeIssues = true
reportUnnecessaryTypeIgnoreComment = true
reportUnnecessaryTypeIgnoreCommentSeverity = "warning"
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportPrivateUsage = true

[tool.ruff]
line-length = 100
indent-width = 4
unsafe-fixes = true
target-version = "py312"
src = [ "src", "test",]
exclude = [ "unreleased/*", "scripts/*", "coverage.xml", "coverage-badge.svg",]

[tool.flake8]
max-line-length = 132
max-doc-length = 132
ignore = [ "E302", "E501",]
exclude = [ ".git", "__pycache__", "docs", "build", "tests", "_venv", "htmlcov", "scripts", ".pytest_cache", ".vscode", "dist", "*.egg-info",]

[tool.isort]
src_paths = [ "src", "test",]
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.bumpcalver]
version_format = "{current_date}-{build_count:03}"
timezone = "America/New_York"
git_tag = true
auto_commit = true
[[tool.bumpcalver.file]]
path = "pyproject.toml"
file_type = "toml"
variable = "project.version"
version_standard = "python"

[[tool.bumpcalver.file]]
path = "src/__init__.py"
file_type = "python"
variable = "__version__"
version_standard = "python"

[[tool.bumpcalver.file]]
path = "makefile"
file_type = "makefile"
variable = "__version__"
version_standard = "default"

[tool.ruff.lint]
select = [ "C", "F", "E", "W", "B",]
ignore = [ "C901", "E501", "B017", "B904", "B008", "E712", "I",]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.coverage.run]
source = [ "src",]
omit = [ "setup.py", "_venv/*", "tests/*", "examples/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "if __name__", "def main", "import_sqlalchemy",]

[tool.pytest.ini_options]
norecursedirs = [ "/tests",]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
addopts = [ "--cov=./", "--cov-report=html", "--cov-report=xml", "-ra", "--strict-markers", "--tb=short", "-p pytester",]
